# syscall-table

./: .gitignore  CNAME  LICENSE  README.md  deploy.sh  gen_syscalls.py  index.html  index.html.template  pyproject.toml  syscall.json
.github/workflows/: main.yml
css/: page.css
www/js/: jquery.dataTables.js
