[tool.poetry]
name = "syscall-table"
version = "0.1.0"
description = ""
authors = ["HexRabbit <h3xrabbit@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
halo = "^0.0.31"
lxml = "^4.9.1"
python-ctags3 = "^1.5.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
